--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<ul>
 				<li><a href="#intro">Welcome</a></li>
-				<li><a href="#work">Selected Work</a></li>
+				<li><a href="#work">Case Studies</a></li>
 				<li><a href="#expertise">Expertise</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -282,3 +282,4 @@
 
 </body>
 </html>
+
